Fix button alignment

--- a/src/less/hero.less
+++ b/src/less/hero.less
@@ -17,7 +17,8 @@
     &:first-of-type { margin-top: 50px; margin-bottom: 20px }
     &:last-of-type { margin-bottom: 50px; }
     @media(min-width: 750px) {
-      margin: 50px 0;
+      &:first-of-type { margin: 50px 0 0; }
+      &:last-of-type { margin: 50px 0 0; }
     }
   }
   h1 {
